--- a/package.json
+++ b/package.json
@@ -1,32 +1,82 @@
 {
  
   "name": "poc01-rganizadorfilmes",
+ 
   "description": "",
+ 
   "version": "1.0.0",
+ 
   "type": "module",
-  "main": "index.js",
+ 
+  "main": "app.js",
+ 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+ 
+   
+  "dev": "npx nodemon src/app.ts",
+ 
+   
+  "test": "echo \"Error: no test specified\" && exit 1"
+ 
   },
+ 
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LucasLuiz01/Poc01-OrganizadorFilmes.git"
+ 
+   
+  "type": "git",
+ 
+   
+  "url": "git+https://github.com/LucasLuiz01/Poc01-OrganizadorFilmes.git"
+ 
   },
+ 
   "keywords": [],
+ 
   "author": "",
+ 
   "license": "ISC",
+ 
   "bugs": {
-    "url": "https://github.com/LucasLuiz01/Poc01-OrganizadorFilmesChampionsLeague/issues"
+ 
+   
+  "url": "https://github.com/LucasLuiz01/Poc01-OrganizadorFilmesChampionsLeague/issues"
+ 
   },
+ 
   "homepage": "https://github.com/LucasLuiz01/Poc01-OrganizadorFilmesChampionsLeague#readme",
-   "dependencies": {
-    "pg": "^8.8.0"
+ 
+  "dependencies": {
+ 
+   
+  "cors": "^2.8.5",
+ 
+   
+  "express": "^4.18.2",
+ 
+   
+  "joi": "^17.7.0",
+ 
+   
+  "pg": "^8.8.0"
+ 
   },
+ 
   "devDependencies": {
-    "@types/express": "^4.17.15",
-    "@types/joi": "^17.2.3",
-    "@types/pg": "^8.6.6",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+ 
+   
+  "@types/express": "^4.17.15",
+ 
+   
+  "@types/joi": "^17.2.3",
+ 
+   
+  "@types/pg": "^8.6.6",
+ 
+   
+  "ts-node": "^10.9.1",
+ 
+   
+  "typescript": "^4.9.4"
+ 
   }
 }
